--- a/frontend/src/components/SideBarComponents/Sidebar/Sidebar.css
+++ b/frontend/src/components/SideBarComponents/Sidebar/Sidebar.css
@@ -3,8 +3,8 @@
 .sidebar-container {
     width: 250px;
     height: 100vh;
-    background-color: var(--color-white);
-    border-right: 1px solid var(--color-border);
+    background-color: var(--cor3);
+    border-right: 1px solid var(--cor8);
     display: flex;
     flex-direction: column;
 }
@@ -47,7 +47,7 @@
         width: 100%;
         height: auto;
         border-right: none;
-        border-bottom: 1px solid var(--color-border);
+        border-bottom: 1px solid var(--cor8);
     }
 
     .sidebar-content {
