💎style(frontend): Padroniza nomes das classes, para evitar conflitos no css

--- a/frontend/src/pages/DashBoard/DashBoard.css
+++ b/frontend/src/pages/DashBoard/DashBoard.css
@@ -1,14 +1,14 @@
-.main-layout {
+.dashboard-container {
     display: flex;
     flex-direction: row;
 }
 
-.main-layout__sidebar {
+.dashboard-container__sidebar {
 
 
 }
 
-.main-layout__left-panel {
+.dashboard-container__content {
 
 
 }
