--- a/frontend/src/pages/GerenciamentoDeRecepcionista/GerenciamentoDeRecepcionista.css
+++ b/frontend/src/pages/GerenciamentoDeRecepcionista/GerenciamentoDeRecepcionista.css
@@ -1,14 +1,14 @@
-.main-layout {
+.recepcionista-container {
     display: flex;
     flex-direction: row;
 }
 
-.main-layout__sidebar {
+.recepcionista-container__sidebar {
 
 
 }
 
-.main-layout__left-panel {
+.recepcionista-container__content {
 
 
 }
