✨feat(frontend): implementa search e botão de cadastro da tela de gerenciar recepcionistas

--- a/frontend/src/styles/variables.css
+++ b/frontend/src/styles/variables.css
@@ -10,6 +10,7 @@
     --cor8: #344054;
     --cor9: rgba(0, 0, 0, 0.1);
     --cor10: #5D7285;
+    --cor11: #f0f2f2;
 
     /* Espaçamentos */
     --spacing-xs: 4px;
