--- a/frontend/src/pages/GerenciamentoDeRecepcionista/GerenciamentoDeRecepcionista.css
+++ b/frontend/src/pages/GerenciamentoDeRecepcionista/GerenciamentoDeRecepcionista.css
@@ -1,14 +1,48 @@
+@import url('../../styles/variables.css');
+
 .recepcionista-container {
     display: flex;
     flex-direction: row;
-}
-
-.recepcionista-container__sidebar {
-
-
+    background-color: #fff;
 }
 
 .recepcionista-container__content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
 
+.recepcionista-container__content__title {
+    flex: 5%;
+    padding: var(--spacing-md);
+    font-weight: var(--font-weight-semibold);
+    font-size: var(--font-size-xl);
+}
 
+.recepcionista-container__content__title-line {
+    width: 100%;
+    height: 1px;
+    background-color: var(--cor4);
+}
+
+.recepcionista-container__content__top {
+    display: flex;
+    flex-direction: row;
+    flex: 5%;
+    margin-left: var(--spacing-md);
+    margin-right: var(--spacing-md);
+}
+
+.searchbar-container {
+    flex: 85%;
+}
+
+.actionbutton-container {
+    flex: 15%;
+    margin-left: var(--spacing-md);
+}
+
+.recepcionista-container__content__table {
+    flex: 90%;
+    /* border: green solid 2px; */
 }
