--- a/frontend/src/pages/GerenciamentoDeProfissionalDaSaude/GerenciamentoDeProfissionalDaSaude.css
+++ b/frontend/src/pages/GerenciamentoDeProfissionalDaSaude/GerenciamentoDeProfissionalDaSaude.css
@@ -1,14 +1,47 @@
+@import url('../../styles/variables.css');
+
 .profissional-container {
     display: flex;
     flex-direction: row;
-}
-
-.profissional-container__sidebar {
-
-
+    background-color: #fff;
 }
 
 .profissional-container__content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
 
+.profissional-container__content__title {
+    flex: 5%;
+    padding: var(--spacing-md);
+    font-weight: var(--font-weight-semibold);
+    font-size: var(--font-size-xl);
+}
 
+.profissional-container__content__title-line {
+    width: 100%;
+    height: 1px;
+    background-color: var(--cor4);
+}
+
+.profissional-container__content__top {
+    display: flex;
+    flex-direction: row;
+    flex: 5%;
+    margin-left: var(--spacing-md);
+    margin-right: var(--spacing-md);
+}
+
+.searchbar-container {
+    flex: 85%;
+}
+
+.actionbutton-container {
+    flex: 15%;
+    margin-left: var(--spacing-md);
+}
+
+.profissional-container__content__table {
+    flex: 90%;
 }
