--- a/frontend/src/pages/GerenciamentoDeProfissionalDaSaude/GerenciamentoDeProfissionalDaSaude.css
+++ b/frontend/src/pages/GerenciamentoDeProfissionalDaSaude/GerenciamentoDeProfissionalDaSaude.css
@@ -33,15 +33,20 @@
     margin-right: var(--spacing-md);
 }
 
-.searchbar-container {
-    flex: 85%;
+.profissional-container__content__top .searchbar-container {
+    flex: 87%;
 }
 
-.actionbutton-container {
-    flex: 15%;
+.profissional-container__content__top .actionbutton-container {
+    flex: 13%;
     margin-left: var(--spacing-md);
 }
 
 .profissional-container__content__table {
-    flex: 90%;
+    flex: 88%;
+    margin: var(--spacing-xl);
+}
+
+.profissional-container__content__pagination {
+    flex: 2%;
 }
