--- a/frontend/src/styles/variables.css
+++ b/frontend/src/styles/variables.css
@@ -11,6 +11,7 @@
     --cor9: rgba(0, 0, 0, 0.1);
     --cor10: #5D7285;
     --cor11: #f0f2f2;
+    --cor12: #E3F7F3;
 
     /* Espaçamentos */
     --spacing-xs: 4px;
