✨feat(frontend): adiciona paginação na page de gerenciar profisisonais da saúde

--- a/frontend/src/pages/GerenciamentoDeProfissionalDaSaude/GerenciamentoDeProfissionalDaSaude.css
+++ b/frontend/src/pages/GerenciamentoDeProfissionalDaSaude/GerenciamentoDeProfissionalDaSaude.css
@@ -49,4 +49,7 @@
 
 .profissional-container__content__pagination {
     flex: 2%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: var(--spacing-xl);
 }
