--- a/frontend/src/pages/GerenciamentoDeRecepcionista/GerenciamentoDeRecepcionista.css
+++ b/frontend/src/pages/GerenciamentoDeRecepcionista/GerenciamentoDeRecepcionista.css
@@ -43,6 +43,13 @@
 }
 
 .recepcionista-container__content__table {
-    flex: 90%;
-    /* border: green solid 2px; */
+    flex: 88%;
+    margin: var(--spacing-xl);
+}
+
+.recepcionista-container__content__pagination {
+    flex: 2%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: var(--spacing-xl);
 }
