🔨refactor(frontend): modifica o tamanho do modal, e altera margem dos FormDescriptors, nos formularios de cadastro e edição

--- a/frontend/src/components/forms/profissional-da-saude/EditarProfissionalForm/EditarProfissionalForm.css
+++ b/frontend/src/components/forms/profissional-da-saude/EditarProfissionalForm/EditarProfissionalForm.css
@@ -1,3 +1,7 @@
+.editar-profissional-form .form-descriptor {
+  margin-top: var(--spacing-xxl);
+}
+
 .input-group {
   display: flex;
   flex-wrap: wrap;
