🔨refactor(frontend): adiciona informações de especialidade, no perfil de profissional

--- a/frontend/src/components/UserProfiles/ProfissionalProfile/ProfissionalProfile.css
+++ b/frontend/src/components/UserProfiles/ProfissionalProfile/ProfissionalProfile.css
@@ -25,6 +25,13 @@
     gap: var(--spacing-md);
 }
 
+.profissionalProfile-container__avatar-informations {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: var(--spacing-md);
+}
+
 .profissionalProfile-container__avatar .avatar-container{
     display: flex;
     flex-direction: column;
