🔨refactor(frontend): ajusta caminhos de pastas para corrigir bugs

--- a/frontend/src/components/SearchBar/SearchBar.css
+++ b/frontend/src/components/SearchBar/SearchBar.css
@@ -1,4 +1,4 @@
-@import url('../../styles/variables.css');
+@import url("@/styles/variables.css");
 
 .searchbar-container {
     background-color: var(--cor11);
