--- a/frontend/src/components/FormDescriptor/FormDescriptor.css
+++ b/frontend/src/components/FormDescriptor/FormDescriptor.css
@@ -1,4 +1,4 @@
-@import url('../../styles/variables.css');
+@import url("@/styles/variables.css");
 
 .form-descriptor {
     background-color: var(--cor1);
