--- a/frontend/src/components/Label/label.css
+++ b/frontend/src/components/Label/label.css
@@ -1,4 +1,4 @@
-@import url('../../styles/variables.css');
+@import url("@/styles/variables.css");
 
 .label-container {
     border-radius: var(--border-radius-lg);
