--- a/frontend/src/components/SideBarComponents/SidebarDropdown/SidebarDropdown.css
+++ b/frontend/src/components/SideBarComponents/SidebarDropdown/SidebarDropdown.css
@@ -1,4 +1,5 @@
-@import '../../../styles/variables.css';
+@import url("@/styles/variables.css");
+
 
 .sidebar-dropdown-container {
     position: relative;
