--- a/frontend/src/components/SideBarComponents/SidebarLogout/SidebarLogout.css
+++ b/frontend/src/components/SideBarComponents/SidebarLogout/SidebarLogout.css
@@ -1,4 +1,5 @@
-@import '../../../styles/variables.css';
+@import url("@/styles/variables.css");
+
 
 .sidebar-logout-wrapper {
     padding: var(--spacing-sm);
