--- a/frontend/src/components/SideBarComponents/SidebarOption/SidebarOption.css
+++ b/frontend/src/components/SideBarComponents/SidebarOption/SidebarOption.css
@@ -1,4 +1,5 @@
-@import '../../../styles/variables.css';
+@import url("@/styles/variables.css");
+
 
 .sidebar-option-wrapper {
     padding: var(--spacing-sm);
