--- a/frontend/src/components/UserProfiles/ProfissionalProfile/ProfissionalProfile.css
+++ b/frontend/src/components/UserProfiles/ProfissionalProfile/ProfissionalProfile.css
@@ -1,4 +1,5 @@
-@import url('../../../styles/variables.css');
+@import url("@/styles/variables.css");
+
 
 .profissionalProfile-container {
     width: 100%;
