--- a/frontend/src/components/UserProfiles/RecepcionistaProfile/RecepcionistaProfile.css
+++ b/frontend/src/components/UserProfiles/RecepcionistaProfile/RecepcionistaProfile.css
@@ -1,4 +1,5 @@
-@import url('../../../styles/variables.css');
+@import url("@/styles/variables.css");
+
 
 .recepcionistaProfile-container {
     width: 100%;
