--- a/frontend/src/components/UserTable/UserTable.css
+++ b/frontend/src/components/UserTable/UserTable.css
@@ -1,4 +1,5 @@
-@import url('../../styles/variables.css');
+@import url("@/styles/variables.css");
+
 
 .usertable-container {
     background-color: var(--cor12);
