✨feat(frontend): implementa funcionalidade de editar especialidade

--- a/frontend/src/components/forms/especialidades/CadastrarEspecialidadeForm/CadastrarEspecialidadeForm.css
+++ b/frontend/src/components/forms/especialidades/CadastrarEspecialidadeForm/CadastrarEspecialidadeForm.css
@@ -1,5 +1,5 @@
-.cadastrar-especialidade-form {
-  margin-top: var(--spacing-xxl);
+.cadastrar-especialidade-form .input-element {
+    width: 300px;
 }
 
 .input-group {
