--- a/frontend/src/pages/GerenciamentoDePacientes/GerenciamentoDePacientes.css
+++ b/frontend/src/pages/GerenciamentoDePacientes/GerenciamentoDePacientes.css
@@ -1,5 +1,48 @@
-.main-layout {
+@import url('../../styles/variables.css');
+
+.paciente-container {
     display: flex;
     flex-direction: row;
+    background-color: #fff;
 }
 
+.paciente-container__content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.paciente-container__content__title {
+    flex: 5%;
+    padding: var(--spacing-md);
+    font-weight: var(--font-weight-semibold);
+    font-size: var(--font-size-xl);
+}
+
+.paciente-container__content__title-line {
+    width: 100%;
+    height: 1px;
+    background-color: var(--cor4);
+}
+
+.paciente-container__content__top {
+    display: flex;
+    flex-direction: row;
+    flex: 5%;
+    margin-left: var(--spacing-md);
+    margin-right: var(--spacing-md);
+}
+
+.searchbar-container {
+    flex: 85%;
+}
+
+.actionbutton-container {
+    flex: 15%;
+    margin-left: var(--spacing-md);
+}
+
+.paciente-container__content__table {
+    flex: 90%;
+    /* border: green solid 2px; */
+}
