--- a/frontend/src/pages/GerenciamentoDePaciente/GerenciamentoDePaciente.css
+++ b/frontend/src/pages/GerenciamentoDePaciente/GerenciamentoDePaciente.css
@@ -1,19 +1,43 @@
 @import url('../../styles/variables.css');
 
-.gerenciamentoDePaciente-container {
+.paciente-container {
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    background-color: #fff;
+}
+
+.paciente-container__content {
     width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-.gerenciamentoDePaciente-container__sidebar {
-    width: 250px;
-    height: 100%;
+.paciente-container__content__title {
+    flex: 5%;
+    padding: var(--spacing-md);
+    font-weight: var(--font-weight-semibold);
+    font-size: var(--font-size-xl);
 }
 
-.gerenciamentoDePaciente-container__content {
-    flex: 1;
-    padding: var(--spacing-lg);
-    overflow-y: auto;
+.paciente-container__content__title-line {
+    width: 100%;
+    height: 1px;
+    background-color: var(--cor4);
+}
+
+.paciente-container__content__top {
+    display: flex;
+    flex-direction: row;
+    flex: 5%;
+    margin-left: var(--spacing-md);
+    margin-right: var(--spacing-md);
+}
+
+.paciente-container__content__top .searchbar-container {
+    flex: 86.5%;
+}
+
+.paciente-container__content__top .actionbutton-container {
+    flex: 13.5%;
+    margin-left: var(--spacing-md);
 }
